--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <title>
         
-          Beantech | 豆科技
+          铁螃盖科技
         
     </title>
 
